<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.AppBarLayout>


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:drawableEnd="@mipmap/ic_chainsaw"
        android:drawableRight="@mipmap/ic_chainsaw"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:text="@string/text_web_site"
        android:textColor="@color/primary"
        android:textSize="30sp"
        android:textStyle="bold" />


    <LinearLayout
        android:id="@+id/edit_text_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        android:padding="10dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_loginlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/email_login"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangular_txt"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:singleLine="true" />


        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_loginlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/question_txt"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangular_txt"
                android:hint="@string/question_txt"
                android:inputType="textMultiLine"
                android:gravity="top"
                android:lines="5"
                android:scrollbars="vertical" />


        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/signin_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:background="@color/primary_dark"
        android:text="@string/btn_text_sign_in"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <Button
        android:id="@+id/registerhere_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:background="@color/primary_dark"
        android:text="@string/btn_text_register_here"
        android:textColor="#ffffff"
        android:textSize="18sp" />


</LinearLayout>
